--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "devDependencies": {
     "react-native-scripts": "1.5.0",
     "jest-expo": "^21.0.2",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-test-renderer": "16.0.0-alpha.12",
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -20,7 +26,10 @@
   },
   "dependencies": {
     "expo": "^21.0.0",
+    "prop-types": "^15.6.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.48.4"
+    "react-native": "^0.48.4",
+    "react-native-easy-grid": "^0.1.15",
+    "react-native-flip-view": "git://github.com/jp928/react-native-flip-view.git"
   }
 }
