--- a/ios/commit_u_react_native/Supporting/Info.plist
+++ b/ios/commit_u_react_native/Supporting/Info.plist
@@ -73,5 +73,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>Privacy - Camera Usage Description</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Privacy - Photo Library Usage Description</string>
 </dict>
 </plist>
